--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600&display=swap');
 
+
 a,
 a:visited,
 a:hover,
@@ -16,6 +17,8 @@ a:active {
 body,
 html {
   width: 100vw;
+  min-width: 100vw;
+  max-width: 100vw;
   font-family: 'Source Sans Pro', sans-serif;
   margin: 0;
   padding: 0;
